Added library to animate icons

--- a/portfolio-3/public/index.html
+++ b/portfolio-3/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Portfolio created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/jeffreylogo.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -17,7 +17,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--CSS Sheets-->
   <link href="https://fonts.googleapis.com/css?family=Nobile&display=swap" rel="stylesheet">
-  <link href="assets/css/style.css" rel="stylesheet">
   <!--Allows Mobile Responsiveness-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--Materialize Icons-->
@@ -26,8 +25,6 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <!--Materialize CDN-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <!--JavaScript File-->
-  <script src="assets/javascript/app.js"></script>
   <!-- Animate On Scroll Library -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!-- Add icon library -->
@@ -40,10 +37,10 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root">
+  </div>
 
-  <script src="assets/javascript/particle.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+
 </body>
 
 </html>
